--- a/frontend/src/app/layouts/primary-layout/components/mobile-sidebar/mobile-sidebar.component.scss
+++ b/frontend/src/app/layouts/primary-layout/components/mobile-sidebar/mobile-sidebar.component.scss
@@ -1,15 +1,15 @@
 @import "vars";
 
 .mobile-sidebar__wrapper {
-  position: absolute;
+  position: fixed;
   left: 0;
   right: 0;
   bottom: 0;
   top: 0;
-  height: 100vh;
   width: 100%;
-  background: #00000081;
-  z-index: 999999;
+  height: 100vh;
+  background: #00000077;
+  z-index: 10;
 }
 
 .toggle_button {
@@ -28,8 +28,8 @@
 }
 
 .sidebar {
-  height: 100vh;
   overflow-y: auto;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
