--- a/frontend/src/app/layouts/primary-layout/components/navbar/navbar.component.scss
+++ b/frontend/src/app/layouts/primary-layout/components/navbar/navbar.component.scss
@@ -6,17 +6,19 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 10px 22px;
-  background: $background;
+  padding: 16px 22px;
+  background: $background-navbar;
+  color: #fff;
   z-index: 5;
+  gap: 12px;
 
   @media (max-width: $sm) {
     padding: 8px;
   }
 
   &__header {
-    font-weight: 600;
-    font-size: 22px;
+    font-weight: 500;
+    font-size: 20px;
 
     @media (max-width: $sm) {
       font-size: 18px;
@@ -30,6 +32,20 @@
 
     @media (max-width: $sm) {
       gap: 8px;
+    }
+  }
+
+  &__search {
+    @media (max-width: $sm) {
+      display: none;
+    }
+
+    &-input {
+      width: 400px;
+      padding: 8px 14px;
+      border: 1px solid #4f4f52;
+      border-radius: 8px;
+      color: $text-white;
     }
   }
 
@@ -78,88 +94,48 @@
   }
 
   &__avatar {
+    &-wrapper {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      cursor: pointer;
+      padding: 6px 10px;
+      border-radius: 10px;
+
+      &:hover {
+        background: #393837;
+      }
+    }
+
     &-img {
-      width: 40px;
-      height: 40px;
+      width: 34px;
+      height: 34px;
       border-radius: 9999px;
-    }
-  }
-}
+      object-fit: cover;
 
-.avatar {
-  &-wrapper {
-    display: flex;
-    align-items: center;
-    gap: 12px;
-    cursor: pointer;
-    padding: 6px 10px;
-    border-radius: 10px;
-
-    &:hover {
-      background: #f7f6f6;
-    }
-  }
-
-  &-img {
-    width: 34px;
-    height: 34px;
-    border-radius: 9999px;
-    object-fit: cover;
-
-    @media (max-width: $sm) {
-      width: 26px;
-      height: 26px;
-    }
-  }
-
-  &-icon {
-    cursor: pointer;
-    color: #494949;
-  }
-
-  &-label {
-    font-size: 14px;
-  }
-}
-
-.notification {
-  padding: 10px 10px;
-
-  &-list {
-    display: flex;
-    flex-direction: column;
-    gap: 2px;
-    font-family: $primary-ff, sans-serif;
-  }
-
-  &-item {
-    display: flex;
-    align-items: center;
-    gap: 12px;
-    font-size: 14px;
-    padding: 6px 4px;
-    cursor: pointer;
-    border-radius: 8px;
-
-    &:hover {
-      background: #eeeded;
-    }
-
-    &-label {
+      @media (max-width: $sm) {
+        width: 26px;
+        height: 26px;
+      }
     }
 
     &-icon {
-      font-size: 18px;
-      width: 18px;
-      height: 18px;
-      color: #4b4b4b;
+      cursor: pointer;
+      color: #494949;
+    }
+
+    &-label {
+      font-size: 14px;
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
     }
   }
 }
 
 .bg-icon {
-  background: #eeeeee;
-  padding: 6px 8px;
+  background: #393837;
+  padding: 10px;
   border-radius: 14px;
   display: flex;
   align-items: center;
@@ -167,7 +143,7 @@
 }
 
 .bell-icon {
-  color: #363636;
+  color: #bbbbbb;
   font-size: 20px;
   width: 20px;
   height: 20px;
