--- a/frontend/src/app/teams/components/navbar/navbar.component.scss
+++ b/frontend/src/app/teams/components/navbar/navbar.component.scss
@@ -18,13 +18,12 @@
 .wrapper {
   width: 100%;
   position: sticky;
-  z-index: 5;
+  z-index: 2;
   top: 0;
   display: flex;
   align-items: center;
   gap: 12px;
-  padding-top: 6px;
-  border-bottom: 1px solid #ebeaea;
+  padding-top: 12px;
   background: $background;
   overflow: auto;
 }
@@ -36,7 +35,7 @@
   font-size: 14px;
   padding-bottom: 12px;
   cursor: pointer;
-  color: $text-black;
+  color: $text-white;
 
   @media (max-width: $sm) {
     padding-bottom: 4px;
@@ -49,11 +48,9 @@
   }
 
   &-active {
-    border-bottom: 1px solid $primary;
-
     * {
       font-weight: 500;
-      color: $primary;
+      color: $primary-light;
     }
   }
 }
