--- a/frontend/src/app/teams/submodules/tasks/components/views/kanban-board/components/kanban-column/kanban-column.component.scss
+++ b/frontend/src/app/teams/submodules/tasks/components/views/kanban-board/components/kanban-column/kanban-column.component.scss
@@ -4,8 +4,8 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
-  height: calc(100vh - 310px);
-  min-width: 300px;
+  width: 320px;
+  height: 100%;
   border-radius: 6px;
 
   &__container {
