--- a/frontend/src/app/teams/submodules/tasks/components/views/kanban-board/components/kanban-item/kanban-item.component.scss
+++ b/frontend/src/app/teams/submodules/tasks/components/views/kanban-board/components/kanban-item/kanban-item.component.scss
@@ -1,6 +1,8 @@
 @import "vars";
 
 .task {
+  width: 100%;
+  overflow-x: hidden;
   padding: 12px 0px;
   border-radius: 6px;
   background: #ffffff;
@@ -53,10 +55,11 @@
 
     &-item {
       font-size: 10px;
-      font-weight: 500;
       padding: 2px 6px;
       background: #d5e5f7;
       border-radius: 4px;
+      text-overflow: clip;
+      overflow: hidden;
     }
   }
 
