--- a/frontend/src/assets/styles/_vars.scss
+++ b/frontend/src/assets/styles/_vars.scss
@@ -13,13 +13,54 @@ $breakpoints: (
 );
 
 //Colors
-$primary: #085fda;
-$primary-dark: #053983;
-$primary-light: #84afed;
+// $primary: #085fda;
+// $primary-dark: #053983;
+// $primary-light: #84afed;
 
-$background: #ffffff;
-$background-sidebar: #010a16;
-$background-light: #f8f9fa;
+// $background: #ffffff;
+// $background-sidebar: #010a16;
+// $background-light: #f8f9fa;
+// $background-active: #0d0e10;
+// $background-active-light: #ebedef;
+
+// $text-white: #f4f5f5;
+// $text-black: #242424;
+
+// $kaiteki-primary-palette: (
+//   50: #84afed,
+//   100: #6b9fe9,
+//   200: #528fe5,
+//   300: #397fe1,
+//   400: #216fde,
+//   500: #085fda,
+//   600: #0756c4,
+//   700: #064cae,
+//   800: #064399,
+//   900: #053983,
+//   A100: #085fda,
+//   A200: #085fda,
+//   A400: #085fda,
+//   A700: #085fda,
+//   contrast: (
+//     50: #f4f5f5,
+//     100: #f4f5f5,
+//     200: #f4f5f5,
+//     300: #f4f5f5,
+//   ),
+// );
+
+$primary: #f25808;
+$primary-dark: #b64206;
+$primary-light: #f58246;
+
+$primary-accent: #0d66fe;
+$primary-accent-dark: #0a4dbf;
+$primary-accent-light: #4a8cfe;
+
+$background: #1b1b1b;
+$background-sidebar: #1b1b1b;
+$background-light: #f2f3f4;
+$background-navbar: #1b1b1b;
 $background-active: #0d0e10;
 $background-active-light: #ebedef;
 
@@ -27,48 +68,48 @@ $text-white: #f4f5f5;
 $text-black: #242424;
 
 $kaiteki-primary-palette: (
-  50: #84afed,
-  100: #6b9fe9,
-  200: #528fe5,
-  300: #397fe1,
-  400: #216fde,
-  500: #085fda,
-  600: #0756c4,
-  700: #064cae,
-  800: #064399,
-  900: #053983,
-  A100: #085fda,
-  A200: #085fda,
-  A400: #085fda,
-  A700: #085fda,
+  50: #f9ac84,
+  100: #f79b6b,
+  200: #f68a52,
+  300: #f57939,
+  400: #f36921,
+  500: #f25808,
+  600: #da4f07,
+  700: #c24606,
+  800: #a93e06,
+  900: #913505,
+  A100: #f25808,
+  A200: #f25808,
+  A400: #f25808,
+  A700: #f25808,
   contrast: (
-    50: #f4f5f5,
-    100: #f4f5f5,
-    200: #f4f5f5,
-    300: #f4f5f5,
+    50: #0d66fe,
+    100: #0d66fe,
+    200: #0d66fe,
+    300: #0d66fe,
   ),
 );
 
 $kaiteki-accent-palette: (
-  50: #ffffff,
-  100: #ffffff,
-  200: #ffffff,
-  300: #ffffff,
-  400: #ffffff,
-  500: #ffffff,
-  600: #ffffff,
-  700: #ffffff,
-  800: #ffffff,
-  900: #ffffff,
-  A100: #ffffff,
-  A200: #ffffff,
-  A400: #ffffff,
-  A700: #ffffff,
+  50: #86b3ff,
+  100: #6ea3fe,
+  200: #5694fe,
+  300: #3d85fe,
+  400: #2575fe,
+  500: #0d66fe,
+  600: #0c5ce5,
+  700: #0a52cb,
+  800: #0947b2,
+  900: #083d98,
+  A100: #0d66fe,
+  A200: #0d66fe,
+  A400: #0d66fe,
+  A700: #0d66fe,
   contrast: (
-    50: #010a16,
-    100: #010a16,
-    200: #010a16,
-    300: #010a16,
+    50: #f25808,
+    100: #f25808,
+    200: #f25808,
+    300: #f25808,
   ),
 );
 
