--- a/frontend/src/app/teams/submodules/meetings/pages/meeting-room/meeting-room.component.html
+++ b/frontend/src/app/teams/submodules/meetings/pages/meeting-room/meeting-room.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="meeting-room">
+<div class="meeting-room">
   <div class="meeting-room__left">
     <div class="meeting-room__main">
       <div class="meeting-room__main-header">
@@ -14,7 +14,7 @@
           <mat-icon class="">more_vert</mat-icon>
         </button>
         <mat-menu #moreHeaderMenu="matMenu">
-          <button mat-menu-item class="more-menu__button">Particapants</button>
+          <button mat-menu-item class="more-menu__button">Participants</button>
         </mat-menu>
       </div>
 
@@ -102,7 +102,7 @@
 
   <div class="meeting-room__right">
     <div class="meeting-room__particapants">
-      <h4 class="meeting-room__particapants-title">Particapant</h4>
+      <h4 class="meeting-room__particapants-title">Participants</h4>
       <div class="meeting-room__particapants-list">
         <div class="meeting-room__particapants-item">
           <div class="meeting-room__particapants-item-avatar"></div>
@@ -115,5 +115,4 @@
       </div>
     </div>
   </div>
-</div> -->
-
+</div>
