--- a/frontend/src/app/landing/components/navbar/navbar.component.html
+++ b/frontend/src/app/landing/components/navbar/navbar.component.html
@@ -62,9 +62,9 @@
         </button>
 
         <mat-menu #profileDropdown="matMenu" yPosition="below">
-          <button mat-menu-item routerLink="app">
+          <button mat-menu-item routerLink="hub">
             <mat-icon>apps</mat-icon>
-            <p>Overview</p>
+            <p>Enter Hub</p>
           </button>
           <button mat-menu-item (click)="onLogout()">
             <mat-icon>logout</mat-icon>
