--- a/frontend/src/app/layouts/primary-layout/components/sidebar/sidebar.component.scss
+++ b/frontend/src/app/layouts/primary-layout/components/sidebar/sidebar.component.scss
@@ -77,7 +77,7 @@
         background: $primary;
 
         &:hover {
-          background: $primary-light;
+          background: $primary;
         }
       }
 
