--- a/frontend/src/app/layouts/primary-layout/primary-layout.component.html
+++ b/frontend/src/app/layouts/primary-layout/primary-layout.component.html
@@ -9,4 +9,13 @@
   </div>
 </div>
 
-<app-spotify-player></app-spotify-player>
+<div
+  cdkDropList
+  cdkDropListOrientation="vertical"
+  class="utilities-sidebar"
+  (cdkDropListDropped)="drop($event)"
+>
+  <div id="Spotify" cdkDrag>
+    <app-spotify-player></app-spotify-player>
+  </div>
+</div>
