--- a/frontend/src/app/overview/pages/overview-home/overview-home.component.scss
+++ b/frontend/src/app/overview/pages/overview-home/overview-home.component.scss
@@ -134,7 +134,7 @@
 
   &__messages {
     padding: 22px;
-    background: $primary-accent-light;
+    background: $primary;
     border-radius: 6px;
 
     &-title {
@@ -156,7 +156,7 @@
       flex-direction: column;
       gap: 2px;
       padding: 8px 16px;
-      background: $primary-accent;
+      background: $primary-dark;
       color: $text-white;
       border-radius: 6px;
 
@@ -186,7 +186,7 @@
   &__events {
     margin-top: 22px;
     padding: 22px;
-    background: $primary-accent-light;
+    background: $primary;
     border-radius: 6px;
 
     &-title {
@@ -208,7 +208,7 @@
       flex-direction: column;
       gap: 2px;
       padding: 8px 16px;
-      background: $primary-accent;
+      background: $primary-dark;
       color: $text-white;
       border-radius: 6px;
 
@@ -221,7 +221,6 @@
 
       &-date {
         font-size: 12px;
-        background: $primary-accent;
       }
     }
   }
