feature: Posts feature created

--- a/frontend/src/app/integrations/submodules/spotify/components/spotify-player/spotify-player.component.scss
+++ b/frontend/src/app/integrations/submodules/spotify/components/spotify-player/spotify-player.component.scss
@@ -6,7 +6,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  background: linear-gradient(to bottom, $background-sidebar, #082b14);
+  background: linear-gradient(to bottom, $background, $primary-dark);
 
   z-index: 1;
 
