--- a/frontend/src/app/layouts/primary-layout/primary-layout.component.html
+++ b/frontend/src/app/layouts/primary-layout/primary-layout.component.html
@@ -9,7 +9,7 @@
   </div>
 </div>
 
-<div
+<!-- <div
   cdkDropList
   cdkDropListOrientation="vertical"
   class="utilities-sidebar"
@@ -18,4 +18,6 @@
   <div id="Spotify" cdkDrag>
     <app-spotify-player></app-spotify-player>
   </div>
-</div>
+</div> -->
+
+<app-spotify-player></app-spotify-player>
