--- a/frontend/src/app/teams/submodules/posts/components/posts-filter/posts-filter.component.html
+++ b/frontend/src/app/teams/submodules/posts/components/posts-filter/posts-filter.component.html
@@ -11,7 +11,7 @@
           <input matInput type="text" formControlName="searchValue" />
         </mat-form-field>
 
-        <mat-form-field appearance="outline">
+        <!-- <mat-form-field appearance="outline">
           <mat-label>Sorting</mat-label>
           <mat-select formControlName="sort">
             <mat-option
@@ -22,7 +22,7 @@
               {{ sort }}
             </mat-option>
           </mat-select>
-        </mat-form-field>
+        </mat-form-field> -->
       </form>
     </mat-expansion-panel>
   </mat-accordion>
