--- a/frontend/src/assets/styles/_vars.scss
+++ b/frontend/src/assets/styles/_vars.scss
@@ -51,7 +51,7 @@ $breakpoints: (
 
 $primary: #0a7549;
 $primary-dark: #053b25;
-$primary-light: #85baa4;
+$primary-light: #3b916d;
 
 $primary-accent: #750a36;
 $primary-accent-dark: #3b051b;
@@ -62,6 +62,7 @@ $background-sidebar: #1b1b1b;
 $background-light: #fff;
 $background-navbar: #1b1b1b;
 $border-color: #dde4e1;
+$border-color-dark: #aab1ae;
 $background-active: #0d0e10;
 $background-active-light: #ebedef;
 
