--- a/frontend/src/app/teams/submodules/chats/components/chats-sidebar/chats-sidebar.component.scss
+++ b/frontend/src/app/teams/submodules/chats/components/chats-sidebar/chats-sidebar.component.scss
@@ -65,17 +65,12 @@ mat-form-field {
     cursor: pointer;
 
     &-active {
-      background: $primary-accent;
-      color: $text-white;
-
-      &:hover {
-        background: $primary-accent-light;
-        color: $text-black;
-      }
+      background: $background-active-light;
+      color: $text-black;
     }
 
     &:hover {
-      background: #393837;
+      background: $background-active-light;
     }
   }
 
