--- a/frontend/src/app/teams/submodules/posts/components/dialogs/create-post-dialog/create-post-dialog.component.html
+++ b/frontend/src/app/teams/submodules/posts/components/dialogs/create-post-dialog/create-post-dialog.component.html
@@ -7,39 +7,29 @@
       <input formControlName="title" matInput />
     </mat-form-field>
 
+    <mat-form-field appearance="outline">
+      <mat-label>Description</mat-label>
+      <input formControlName="description" matInput />
+    </mat-form-field>
+
     <quill-editor
       [modules]="quillConfig"
-      formControlName="description"
+      formControlName="content"
       theme="snow"
-      placeholder="Description"
+      placeholder="Write your amazing post"
       class="quill__editor"
     ></quill-editor>
 
-    <mat-form-field appearance="outline">
-      <mat-label>Tags</mat-label>
-      <mat-chip-grid #chipGrid aria-label="Enter fruits">
-        <mat-chip-row
-          *ngFor="let tag of selectedTags"
-          (removed)="remove(tag)"
-          [editable]="true"
-          (edited)="edit(tag, $event)"
-        >
-          {{ tag }}
-          <button matChipRemove>
-            <mat-icon>cancel</mat-icon>
-          </button>
-        </mat-chip-row>
-        <input
-          matInput
-          formControlName="tags"
-          placeholder="Add a tag..."
-          [matChipInputFor]="chipGrid"
-          (matChipInputTokenEnd)="add($event)"
-        />
-      </mat-chip-grid>
-    </mat-form-field>
-
-    <div class="cpost__form-toolbar"></div>
+    <div class="cpost__upload-image">
+      <p>Upload your hero image</p>
+      <file-upload
+        formControlName="image"
+        [multiple]="false"
+        fileslimit="1"
+        [maxsize]="1048576"
+        accept="image/*"
+      ></file-upload>
+    </div>
   </form>
 </section>
 
