--- a/frontend/src/app/teams/submodules/files/components/views/files-table-view/files-table-view.component.html
+++ b/frontend/src/app/teams/submodules/files/components/views/files-table-view/files-table-view.component.html
@@ -24,7 +24,7 @@
     <ng-container matColumnDef="size">
       <th mat-header-cell *matHeaderCellDef>Size</th>
       <td mat-cell *matCellDef="let element">
-        {{ getFormattedFileSize(element.sizeInBytes) }}
+        {{ getFormattedFileSize(element.size) }}
       </td>
     </ng-container>
 
