feature: files-teams updates

--- a/frontend/src/app/teams/submodules/dashboard/pages/dashboard/dashboard.component.html
+++ b/frontend/src/app/teams/submodules/dashboard/pages/dashboard/dashboard.component.html
@@ -19,7 +19,7 @@
           (onDeleteMemberEmitter)="onDeleteMember($event)"
         ></app-dashboard-cards-view>
 
-        <app-paginator (pageInfo)="onPage($event)" [pagination]="pagination">
+        <app-paginator (onPage)="onPage($event)" [pagination]="pagination">
         </app-paginator>
       </ng-container>
     </div>
