--- a/frontend/src/app/teams/submodules/files/components/dialogs/upload-file-dialog/upload-file-dialog.component.html
+++ b/frontend/src/app/teams/submodules/files/components/dialogs/upload-file-dialog/upload-file-dialog.component.html
@@ -13,7 +13,11 @@
       ></textarea>
     </mat-form-field>
 
-    <file-upload formControlName="files" fileslimit="1"></file-upload>
+    <file-upload
+      formControlName="files"
+      [multiple]="false"
+      fileslimit="1"
+    ></file-upload>
   </form>
 </section>
 
