--- a/frontend/src/app/teams/submodules/files/components/views/files-list-view/components/files-list-item/files-list-item.component.html
+++ b/frontend/src/app/teams/submodules/files/components/views/files-list-view/components/files-list-item/files-list-item.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="file" class="files__item">
-  <div class="files__item-preview-wrapper">
-    <ng-container *ngIf="true">
+  <div class="files__item-preview-wrapper" [matMenuTriggerFor]="menu">
+    <ng-container *ngIf="isImage; else previewIconTemplate">
       <img
         src="api/v1/files/{{ file.fileId }}"
         loading="lazy"
@@ -10,7 +10,9 @@
     </ng-container>
   </div>
 
-  <h5 class="files__item-title">{{ file.filename }}</h5>
+  <h5 class="files__item-title" [matMenuTriggerFor]="menu">
+    {{ file.filename }}
+  </h5>
   <p class="files__item-desc">{{ file.description }}</p>
 
   <div class="files__item-bottom">
@@ -24,3 +26,14 @@
 <ng-template #previewIconTemplate>
   <mat-icon class="files__item-preview-icon">insert_drive_file</mat-icon>
 </ng-template>
+
+<mat-menu #menu="matMenu">
+  <button mat-menu-item (click)="onDownloadClick()">
+    <mat-icon>download</mat-icon>
+    Download
+  </button>
+  <button mat-menu-item (click)="onUpdateClick()">
+    <mat-icon>edit</mat-icon>
+    Update
+  </button>
+</mat-menu>
