--- a/frontend/src/app/teams/submodules/files/pages/files-list/files-list.component.html
+++ b/frontend/src/app/teams/submodules/files/pages/files-list/files-list.component.html
@@ -1,4 +1,4 @@
-<section class="page">
+<section class="page files">
   <app-files-toolbar></app-files-toolbar>
 
   <app-files-filter (onFilter)="onFilter($event)"></app-files-filter>
@@ -16,4 +16,7 @@
       ></app-files-table-view>
     </ng-container>
   </div>
+
+  <app-paginator (onPage)="onPage($event)" [pagination]="pagination">
+  </app-paginator>
 </section>
