--- a/frontend/src/app/teams/submodules/files/components/files-toolbar/files-toolbar.component.html
+++ b/frontend/src/app/teams/submodules/files/components/files-toolbar/files-toolbar.component.html
@@ -7,7 +7,7 @@
     <app-button
       class="files__toolbar-item"
       icon="upload"
-      (click)="onUploadButtonClick($event)"
+      (click)="onUploadButtonClick()"
     >
       <p>Upload</p>
     </app-button>
