--- a/frontend/src/app/teams/submodules/files/components/views/files-table-view/files-table-view.component.html
+++ b/frontend/src/app/teams/submodules/files/components/views/files-table-view/files-table-view.component.html
@@ -12,7 +12,7 @@
     <ng-container matColumnDef="createdDate">
       <th mat-header-cell *matHeaderCellDef>Created Date</th>
       <td mat-cell *matCellDef="let element">
-        {{ element.createdAt | date : "EEEE, MMMM d" }}
+        {{ element.createdDate | date : "EEEE, MMMM d" }}
       </td>
     </ng-container>
 
