feature: teams layout, pagination in posts, team-files

--- a/frontend/src/app/teams/submodules/posts/pages/posts/posts.component.html
+++ b/frontend/src/app/teams/submodules/posts/pages/posts/posts.component.html
@@ -10,6 +10,9 @@
         </ng-container>
       </ng-container>
     </div>
+
+    <app-paginator (onPage)="onPage($event)" [pagination]="pagination">
+    </app-paginator>
   </div>
 
   <div class="posts__sidebar">
